src/test/deca/context/valid/test_init_compatible_float.deca
// Description:
//    Initialization
//
// Resultats:
//   Initialization d'une variable de type float
//
// Historique:
//    cree le 01/01/2024

{
   float a = 42.3 ;
}
