src/test/deca/context/invalid/wobj/test_init_compatible_string.deca
// Description:
//   Declaration de type String avec initialisation  impossible
//
// Resultats:
//       ligne 10 : Vous ne pouvez pas declarer une variable de type String!
// Historique:
//    cree le 01/01/2024

{
   string s = "Hello" ;
}
